# zmk-layout

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  debug_ast_structure.py  debug_behavior_data.py  debug_behavior_extraction.py  debug_binding_format.py  debug_binding_to_str.py  debug_direct_behavior_extraction.py  debug_extraction_pipeline.py  debug_formatter_flow.py  debug_keymap_flow.py  debug_keymap_node.py  debug_method_signature.py  debug_parsing_pipeline.py  debug_processor_behaviors.py  debug_roundtrip_behavior_extraction.py  debug_section_extractor_type.py  debug_to_dict.py  pyproject.toml
docs/: BREAKING_CHANGES.md  IMPLEMENTATION_STATUS.md  LARK_PARSER_PARITY_ANALYSIS.md  PREPROCESSOR_ANALYSIS.md  glovebox_integration.md  infrastructure.md  providers_guide.md
examples/: README.md  advanced_operations.py  basic_usage.py  corrected_basic_usage.py  data_only_usage.py  factory_verification_demo.py  generate_string_demo.py  glove80_fluent_api_demo.py  infrastructure_usage.py  integration_patterns.py  keymap_generation.py  keymap_io_example.py  real_world_example.py  roundtrip_demo.py  simple_demo.py  simple_layout_helpers.py
keyboards/: glove80_profile.py
tests/: __init__.py  test_ast_behavior_converter.py  test_ast_walker.py  test_comment_detection_fix.py  test_core.py  test_core_operations.py  test_coverage_boost.py  test_dt_parser.py  test_dt_parser_minimal.py  test_export_manager_comprehensive.py  test_factory_layout_roundtrip.py  test_fluent_api.py  test_fluent_binding.py  test_generator_builders.py  test_generators.py  test_generators_simple.py  test_golden_files.py  test_infrastructure.py  test_json_operations_template.py  test_keymap_parser.py  test_keymap_processors_comprehensive.py  test_models.py  (+21 more)
(+117 files in other folders)
